--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -37,9 +37,9 @@ Work-packages have two other types of external data associated with them: A cryp
 
 \subsubsection{Segments, Imports and Exports}
 
-The ability to communicate large amounts of data from one work-package to some subsequent work-package is a key feature of the \Jam availability system. An export segment, defined as the set $\G$, is an octet sequence of fixed length $\mathsf{W}_S\mathsf{W}_E = 4104$. It is the smallest datum which may individually be imported from---or exported to---the long-term \emph{Imports DA} during the Refine function of a work-package. Being an exact multiple of the erasure-coding piece size ensures that the data segments of work-package can be efficiently placed in the DA system.
+The ability to communicate large amounts of data from one work-package to some subsequent work-package is a key feature of the \Jam availability system. An export segment, defined as the set $\G$, is an octet sequence of fixed length $\mathsf{W}_G = 4104$. It is the smallest datum which may individually be imported from---or exported to---the long-term \emph{Imports \textsc{da}} during the Refine function of a work-package. Being an exact multiple of the erasure-coding piece size ensures that the data segments of work-package can be efficiently placed in the \textsc{da} system.
 \begin{equation}\label{eq:segment}
-  \G \equiv \Y_{\mathsf{W}_S\mathsf{W}_E}
+  \G \equiv \Y_{\mathsf{W}_G}
 \end{equation}
 
 Exported segments are data which are \emph{generated} through the execution of the Refine logic and thus are a side effect of transforming the work-package into a work-report. Since their data is deterministic based on the execution of the Refine logic, we do not require any particular commitment to them in the work-package beyond knowing how many are associated with each Refine invocation in order that we can supply an exact index.
@@ -54,7 +54,7 @@ It is the task of a guarantor to reconstitute all imported segments through fetc
 
 Justification data must be available to any node over the course of its segment's potential requirement. At around 350 bytes to justify a single segment, justification data is too voluminous to have all validators store all data. We therefore use the same overall availability framework for hosting justification metadata as the data itself.
 
-The guarantor is able to use this proof to justify to themselves that they are not wasting their time on incorrect behavior. We do not force auditors to go through the same process. Instead, guarantors build an \emph{Auditable Work Package}, and place this in the Audit DA system. This is the original work-package, its extrinsic data, its imported data and a concise proof of correctness of that imported data. This tactic routinely duplicates data between the Imports DA and the Audits DA, however it is acceptable in order to reduce the bandwidth cost for auditors who must justify the correctness as cheaply as possible as auditing happens on average 30 times for each work-package whereas guaranteeing happens only twice or thrice.
+The guarantor is able to use this proof to justify to themselves that they are not wasting their time on incorrect behavior. We do not force auditors to go through the same process. Instead, guarantors build an \emph{Auditable Work Package}, and place this in the Audit \textsc{da} system. This is the original work-package, its extrinsic data, its imported data and a concise proof of correctness of that imported data. This tactic routinely duplicates data between the Imports \textsc{da} and the Audits \textsc{da}, however it is acceptable in order to reduce the bandwidth cost for auditors who must justify the correctness as cheaply as possible as auditing happens on average 30 times for each work-package whereas guaranteeing happens only twice or thrice.
 
 \subsection{Packages and Items}\label{sec:packagesanditems}
 
@@ -70,13 +70,14 @@ We begin by defining a \emph{work-package}, of set $\mathbb{P}$, and its constit
   }
 \end{equation}
 
-A work item includes: $s$ the identifier of the service to which it relates, the code hash of the service at the time of reporting $c$ (whose preimage must be available from the perspective of the lookup anchor block), a payload blob $\mathbf{y}$, a gas limit $g$, and the three elements of its manifest, a sequence of imported data segments $\wi¬importsegments$ which identify a prior exported segment through an index and the identity of an exporting work-package, $\wi¬extrinsics$, a sequence of blob hashes and lengths to be introduced in this block (and which we assume the validator knows) and $\wi¬exportsegments$ the number of data segments exported by this work item.
+A work item includes: $s$ the identifier of the service to which it relates, the code hash of the service at the time of reporting $c$ (whose preimage must be available from the perspective of the lookup anchor block), a payload blob $\mathbf{y}$, gas limits for Refinement and Accumulation $g$ \& $a$, and the three elements of its manifest, a sequence of imported data segments $\wi¬importsegments$ which identify a prior exported segment through an index and the identity of an exporting work-package, $\wi¬extrinsics$, a sequence of blob hashes and lengths to be introduced in this block (and which we assume the validator knows) and $\wi¬exportsegments$ the number of data segments exported by this work item.
 \begin{equation}\label{eq:workitem}
   \mathbb{I} \equiv \tuple{\begin{aligned}
     &\isa{s}{\N_S},
     \isa{c}{\H},
     \isa{\mathbf{y}}{\Y},
     \isa{g}{\N_G},
+    \isa{a}{\N_G},
     \isa{\wi¬exportsegments}{\N}, \\
     &\isa{\wi¬importsegments}{\seq{\tuple{\H \cup (\H^\boxplus),\N}}},
     \isa{\wi¬extrinsics}{\seq{(\H, \N)}}
@@ -94,13 +95,24 @@ We limit both the total number of exported items and the total number of importe
 
 We make an assumption that the preimage to each extrinsic hash in each work-item is known by the guarantor. In general this data will be passed to the guarantor alongside the work-package.
 
-We limit the encoded size of a work-package plus the total size of the implied import and extrinsic items to 12\textsc{mb} in order to allow for around 2\textsc{mb}/s/core data throughput:
+We limit the total size of the implied import and extrinsic items, together with all payloads, the authorizer parameter and the authorization token to 12\textsc{mb} in order to allow for around 2\textsc{mb}/s/core data throughput:
 \begin{align}
   \label{eq:checkextractsize}
-  \forall \wpX &\in \mathbb{P}: \left(
-  \sum_{\wiX \in \wpX_\wp¬workitems} |\wiX_\wi¬importsegments|\cdot\mathsf{W}_S\mathsf{W}_E + \sum_{\wiX \in \wpX_\wp¬workitems} \sum_{(h, l) \in \wiX_\wi¬extrinsics} \!\!\!l\right) \le \mathsf{W}_P \\
-  \mathsf{W}_P &= 12\cdot2^{20}
+  &\begin{aligned}
+    &\forall \wpX \in \mathbb{P}: \Big(|p_\mathbf{j}| + |p_\mathbf{p}| +
+    \!\!\sum_{\wiX \in \wpX_\wp¬workitems}\!\!S(\wiX)\Big) \le \mathsf{W}_B \\
+    &\where S(\wiX \in \mathbb{I}) \equiv |\wiX_\mathbf{y}| + |\wiX_\wi¬importsegments|\cdot\mathsf{W}_G + \!\!\!\!\!\!\sum_{(h, l) \in \wiX_\wi¬extrinsics} \!\!\!l
+  \end{aligned}\\
+  &\mathsf{W}_B \equiv 12\cdot2^{20}
 \end{align}
+
+We limit the sums of each of the two gas limits to be at most the maximum gas allocated to a core for the corresponding operation:
+\begin{equation}
+  \forall \wpX \in \mathbb{P}:\ \;
+    \sum_{\wiX \in \wpX_\wp¬workitems}(\wiX_a) < \mathsf{G}_A
+  \quad\wedge\ \;
+    \sum_{\wiX \in \wpX_\wp¬workitems}(\wiX_r) < \mathsf{G}_R
+\end{equation}
 
 %The implication of equation \ref{eq:checkextractsize} is that we have access to the preimage of all extrinsic data. For guaranteeing, this implies the work-package author probably submits the preimages alongside the work-package itself. For auditing, the extrinsic preimages may be reconstructed in the same manner as the work-package. Both are described later.
 
@@ -108,7 +120,7 @@ Given the result $o$ of some work-item, we define the item-to-result function $\
 \begin{equation}
   \itemtoresult\colon\left\{\begin{aligned}
     (\mathbb{I}, \Y \cup \mathbb{J}) &\to \mathbb{L}\\
-    ((s, c, \mathbf{y}, g), o) &\mapsto (s, c, \mathcal{H}(\mathbf{y}), g, o)
+    ((s, c, \mathbf{y}, a), \mathbf{o}) &\mapsto (s, c, \mathcal{H}(\mathbf{y}), \is{g}{a}, \mathbf{o})
   \end{aligned}\right.
 \end{equation}
 
@@ -126,26 +138,26 @@ We define the work-package's implied authorizer as $\wpX_\wp¬authorizer$, the h
 \subsubsection{Exporting}
 Any of a work-package's work-items may \emph{export} segments and a \emph{segments-root} is placed in the work-report committing to these, ordered according to the work-item which is exporting. It is formed as the root of a constant-depth binary Merkle tree as defined in equation \ref{eq:constantdepthmerkleroot}.
 
-Guarantors are required to erasure-code and distribute two data sets: one blob, the auditable work-package containing the encoded work-package, extrinsic data and self-justifying imported segments which is placed in the short-term Audit DA store and a second set of exported-segments data together with the \emph{Paged-Proofs} metadata. Items in the first store are short-lived; assurers are expected to keep them only until finality of the block in which the availability of the work-result's work-package is assured. Items in the second, meanwhile, are long-lived and expected to be kept for a minimum of 28 days (672 complete epochs) following the reporting of the work-report.
+Guarantors are required to erasure-code and distribute two data sets: one blob, the auditable work-package containing the encoded work-package, extrinsic data and self-justifying imported segments which is placed in the short-term Audit \textsc{da} store and a second set of exported-segments data together with the \emph{Paged-Proofs} metadata. Items in the first store are short-lived; assurers are expected to keep them only until finality of the block in which the availability of the work-result's work-package is assured. Items in the second, meanwhile, are long-lived and expected to be kept for a minimum of 28 days (672 complete epochs) following the reporting of the work-report.
 
-We define the paged-proofs function $\pagedproofs$ which accepts a series of exported segments $\mathbf{s}$ and defines some series of additional segments placed into the Imports DA system via erasure-coding and distribution. The function evaluates to pages of hashes, together with subtree proofs, such that justifications of correctness based on a segments-root may be made from it:
+We define the paged-proofs function $\pagedproofs$ which accepts a series of exported segments $\mathbf{s}$ and defines some series of additional segments placed into the Imports \textsc{da} system via erasure-coding and distribution. The function evaluates to pages of hashes, together with subtree proofs, such that justifications of correctness based on a segments-root may be made from it:
 \begin{equation}\label{eq:pagedproofs}
   \!\!\pagedproofs\colon\left\{\begin{aligned}
     \seq{\G} \to \,&\seq{\G} \\
     \mathbf{s} \mapsto \,&\sq{
       \mathcal{P}_l(\se(
         \var{\mathcal{J}_6(\mathbf{s}, i)},
-        \var{\mathcal{H}^\#(\mathbf{s}_{i\dots+64})}
+        \var{\mathcal{L}_6(\mathbf{s}, i)}
       ))
-      \mid i \orderedin 64\cdot\N_{\ceil{\nicefrac{|\mathbf{s}|}{64}}}
+      \mid i \orderedin \N_{\ceil{\nicefrac{|\mathbf{s}|}{64}}}
     } \\
-    & \where l = \mathsf{W}_S\mathsf{W}_E
+    & \where l = \mathsf{W}_G
   \end{aligned}\right.\!\!\!\!
 \end{equation}
 
-Note: in the case that $|\mathbf{s}|$ is not a multiple of 64, then the term $\mathbf{s}_{i\dots+64}$ will correctly refer to fewer than 64 elements if it is the final page.
-
 \subsection{Computation of Work Results}\label{sec:computeworkresult}
+
+% TODO: Pass in entire Work Package and provide host-call to extract other Work Item payloads, imports and extrinsics.
 
 We now come to the work result computation function $\Xi$. This forms the basis for all utilization of cores on \Jam. It accepts some work-package $\wpX$ for some nominated core $c$ and results in either an error $\error$ or the work result and series of exported segments. This function is deterministic and requires only that it be evaluated within eight epochs of a recently finalized block thanks to the historical lookup functionality. It can thus comfortably be evaluated by any node within the auditing period, even allowing for practicalities of imperfect synchronization.
 
