WP&WRs: Require export segment counts to be correct.

--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -195,8 +195,11 @@ Where:
     \extrinsicdata(w),
     \ell
   )\\
-  &\also h = \mathcal{H}(\wpX)\,,\; w = \wpX_\wp¬workitems[j]\,,\; \ell = \sum_{k < j}\wpX_\wp¬workitems[k]_\wi¬exportsegments
+  &\also h = \mathcal{H}(\wpX)\,,\; w = \wpX_\wp¬workitems[j]\,,\; \ell = \sum_{k < j}\wpX_\wp¬workitems[k]_\wi¬exportsegments\\
+  \forall j &\in \N_{|\wpX_\wp¬workitems|} : |\mathbf{e}| = \wpX_\mathbf{w}[j]_e\ \where (r, \mathbf{e}) = \countupexports(\wpX, j)
 \end{align*}
+
+Note that we require the number of segments actually exported by each work-item's Refine execution to be correctly reported in the work-item's export segment count. This is to ensure that the export segment indices are correctly calculated during the Refine invocation.
 
 Initially we constrain the segment-root dictionary $\mathbf{l}$: It should contain entries for all unique work-package hashes of imported segments not identified directly via a segment-root but rather through a work-package hash.
 
