--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -173,7 +173,7 @@ We define the constant-depth binary Merkle function as $\mathcal{M}$. We define 
   \label{eq:constantdepthsubtreemerkleleafpage}
   \mathcal{L}_x&\colon \left\{\begin{aligned}
     (\seq{\Y}, \N_{|\mathbf{v}|}, \Y \to \H) &\to \seq{\H}\\
-    (\mathbf{v}, i, H) &\mapsto [H(\token{\$leaf} \concat l) \mid l \orderedin \mathbf{s}_{2^xi \dots \min(2^xi+2^x, |\mathbf{s}|)}]
+    (\mathbf{v}, i, H) &\mapsto [H(\token{\$leaf} \concat l) \mid l \orderedin \mathbf{v}_{2^xi \dots \min(2^xi+2^x, |\mathbf{v}|)}]
   \end{aligned}\right.
 \end{align}
 
