--- a/text/serialization.tex
+++ b/text/serialization.tex
@@ -159,8 +159,9 @@ A block $\mathbf{B}$ is serialized as a tuple of its elements in regular order, 
     (0, \var{o}) &\when o \in \Y \\
     1 &\when o = \infty \\
     2 &\when o = \panic \\
-    3 &\when o = \token{BAD} \\
-    4 &\when o = \token{BIG} \\
+    3 &\when o = \badexports \\
+    4 &\when o = \token{BAD} \\
+    5 &\when o = \token{BIG} \\
   \end{cases}\\
   \se_I(h \in \H \cup \H^\boxplus, i \in \N_{2^{15}}) &\equiv \begin{cases}
     (h, \se_2(i)) &\when h \in \H\\
